# frontier_dental

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
output/: products.csv  products.json  products.sqlite
src/frontier_dental/: __init__.py  __main__.py  cli.py  config.py  http_client.py  llm.py  models.py  pipeline.py  playwright_fetcher.py  recs.py  storage.py
src/frontier_dental/agents/: __init__.py  extractor.py  navigator.py  validator.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_navigator.py  test_pipeline.py  test_recs.py  test_storage.py  test_validator.py
tests/fixtures/: pdp_alasta_pro.html  pdp_irregular.html  pdp_lignospan.html
